--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body{
   font-family: 'Lato', sans-serif;
  text-align: center;
   background-color: #f2e3c6;
+  margin-top: 100px;
 }
 
 mynav{
@@ -24,6 +25,7 @@ mynav{
 
 .myFamily{
 margin-bottom: 50px;
+
   
   
   
