--- a/benefits.css
+++ b/benefits.css
@@ -2,26 +2,56 @@
 body{
   font-family: 'Lato', sans-serif;
  text-align: center;
-  background-color: #f2e3c6;
+   background-color: #efebe9 ;
+  margin-top: 100px;
+}
+.bl{
+  color: #000;
 }
 
-#mynav{
- font-size: 20px; 
   
+
+.question{
+color: #3A66AC;
 }
-
-
-#mynav a{
+h2,h4{
+color: #3A66AC;
+}
+p{
+color: #000;
+}
+b{
+color: #D48600;
+}
+#nav a{
  text-decoration: none; 
   color: white;
 
   
 }
-#mynav li {
+#nav li {
     display: inline;
   padding: 50px;
 }
 
+.myFamily{
+margin-bottom: 50px;
+
+  
+  
+  
+}
+#myShadowFamily{
+ width:400px; 
+  height:400px;
+  border-radius: 1000px;
+margin-top:50px;
+}
+
+ul{
+  list-style-type: none; 
+  padding: 0;
+}
 #footer li{
  display: inline;
 padding: 50px;
@@ -30,9 +60,4 @@ padding: 50px;
  text-decoration:none ; 
   color: white;
   
-}
-
-ul{
-  list-style-type: none; 
-  padding: 0;
 }
