--- a/thoughts.css
+++ b/thoughts.css
@@ -1,23 +1,69 @@
-    
+
 body{
   font-family: 'Lato', sans-serif;
- text-align: center;
-  background-color: #f2e3c6;
+ 
+   background-color: #efebe9 ;
+  margin-top: 100px;
+}
+.bl{
+  color: #000;
 }
 
-mynav{
- font-size: 20px; 
-  
+
+
+.question{
+color: #3A66AC;
 }
-
-
-mynav a{
+h2{
+color: #3A66AC;
+  text-align: center;
+}
+h3{
+  color: #D48600;
+    text-align: center;
+}
+p{
+color: #000;
+  font-size: 18px;
+}
+b{
+color: #D48600;
+}
+#nav a{
  text-decoration: none; 
-  color: #86615C;
+  color: white;
 
   
 }
-mynav li {
+#nav li {
     display: inline;
   padding: 50px;
+}
+
+.myFamily{
+margin-bottom: 50px;
+
+  
+  
+  
+}
+#myShadowFamily{
+ width:400px; 
+  height:400px;
+  border-radius: 1000px;
+margin-top:50px;
+}
+
+ul{
+  list-style-type: none; 
+  padding: 0;
+}
+#footer li{
+ display: inline;
+padding: 50px;
+}
+#footer a{
+ text-decoration:none ; 
+  color: white;
+  
 }
